--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
         <p>2024 - EncontreJá. Todos os direitos reservados</p>
         <p>Desenvolvido por Lwkas Carvalho</p>
     </footer>
+    <script src="dados.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
