Implementação de renderização dos resultados a partir da base de dados

--- a/index.html
+++ b/index.html
@@ -16,22 +16,7 @@
             <input type="text" placeholder="O que está procurando?">
             <button>Buscar</button>
         </section>
-        <section class="resultados-pesquisa">
-            <div class="item-resultado">
-                <h2>Sorveteria 3 Irmãos</h2>
-                <p class="descricao-meta">Sorveteria 3 Irmãos é o lugar ideal para você e sua familia saborear o melhor milk-shake da cidade!</p>
-                <a href="https://www.instagram.com/sorveteria3irmaos_/" target="_blank">Clique aqui para saber mais</a>
-            </div>
-            <div class="item-resultado">
-                <h2>Sorveteria 3 Irmãos</h2>
-                <p class="descricao-meta">Sorveteria 3 Irmãos é o lugar ideal para você e sua familia saborear o melhor milk-shake da cidade!</p>
-                <a href="https://www.instagram.com/sorveteria3irmaos_/" target="_blank">Clique aqui para saber mais</a>
-            </div>
-            <div class="item-resultado">
-                <h2>Sorveteria 3 Irmãos</h2>
-                <p class="descricao-meta">Sorveteria 3 Irmãos é o lugar ideal para você e sua familia saborear o melhor milk-shake da cidade!</p>
-                <a href="https://www.instagram.com/sorveteria3irmaos_/" target="_blank">Clique aqui para saber mais</a>
-            </div>
+        <section class="resultados-pesquisa" id="resultado-pesquisa">
             
         </section>
     </main>
