Funcionalidade de busca com validação e filtragem

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
     <main>
         <section>
-            <input type="text" placeholder="O que está procurando?">
-            <button>Buscar</button>
+        <input id="campo-pesquisa" type="text" placeholder="O que está procurando?">
+            <button onclick="pesquisar()">Buscar</button>
         </section>
         <section class="resultados-pesquisa" id="resultado-pesquisa">
             
